Completed API services for ShelfTrade App
Completed API services for ShelfTrade App

--- a/ServicesForShelfSwap/appsettings.json
+++ b/ServicesForShelfSwap/appsettings.json
@@ -15,7 +15,7 @@
     "FromEmail": "sangitaparui9@gmail.com"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=ShelfTrade;TrustServerCertificate=True;User Id=sangita;Password=NewPassword;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=192.168.10.10;Database=ShelfTrade;TrustServerCertificate=True;User Id=developer2;Password=Pragathi@1234#;MultipleActiveResultSets=true"
   },
   "JwtSettings": {
     "SecretKey": "aRandomGeneratedString12345!@#VerySecret", // A long, random secret key used to sign the JWT
